# benchmarking_splink_infrastructure

./: .gitignore  analyse.py  benchmark.py  check_model.py  pyproject.toml  readme.md  splink_model_i-0bde982fc2f1ec689_f128871.json  stats_for_blog.py  user_data_clone_run_benchmarks.sh
analysis_functions/: blog_charts.py  charts.py  duckdb_helpers.py  messages.py  s3.py  vantage_sh_instances.csv
benchmarking_functions/: chart_metrics.py  cloudwatch.py  constants.py  ec2.py  iam.py  s3.py
